# raytracer

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  add_module.sh
src/: Box.cpp  CMakeLists.txt  Camera.cpp  Color.cpp  Configuration.cpp  Cylinder.cpp  Disk.cpp  Image.cpp  Material.cpp  Object.cpp  Ray.cpp  Rectangle.cpp  Renderer.cpp  RendererDeterministic.cpp  RendererMC.cpp  RendererSimple.cpp  Scene.cpp  Sphere.cpp  Texture.cpp  Torus.cpp  Video.cpp  main.cpp
src/Geometry/: AxisAlignedBox.cpp  AxisAlignedBox.hpp  Box.cpp  Box.hpp  BoxAxisAligned.cpp  BoxAxisAligned.hpp  CompositeShape.cpp  CompositeShape.hpp  Disk.cpp  Disk.hpp  GeometricObject.cpp  GeometricObject.hpp  Intersection.cpp  Intersection.hpp  Line.cpp  Line.hpp  OrthonormalBasis.cpp  OrthonormalBasis.hpp  Rectangle.cpp  Rectangle.hpp  Shape.cpp  Shape.hpp  Shapes.hpp  Sphere.cpp  Sphere.hpp  Tube.cpp  Tube.hpp
src/Rendering/: Camera.cpp  Camera.hpp  GBuffer.cpp  GBuffer.hpp  Material.cpp  Material.hpp  Ray.cpp  Ray.hpp  Renderer.cpp  Renderer.hpp  RendererDeterministic.cpp  RendererDeterministic.hpp  RendererMC.cpp  RendererPathTracer.cpp  RendererPathTracer.hpp  RendererPathTracerNEE.cpp  RendererPathTracerNEE.hpp  RendererRayTracer.cpp  RendererRayTracer.hpp  RendererSimple.cpp  RendererSimple.hpp
src/Scene/: Box.cpp  Box.hpp  CompositeObject.cpp  CompositeObject.hpp  Cylinder.cpp  Cylinder.hpp  CylinderOpen.cpp  CylinderOpen.hpp  Disk.cpp  Disk.hpp  Object.cpp  Object.hpp  ObjectComposite.cpp  Objects.hpp  (+13 more)
tests/: CMakeLists.txt  test_Box.cpp  test_Camera.cpp  test_Color.cpp  test_Configuration.cpp  test_Cylinder.cpp  test_Disk.cpp  test_Image.cpp  test_Intersection.cpp  test_Material.cpp  test_Ray.cpp  test_Rectangle.cpp  test_Renderer.cpp  test_RendererDeterministic.cpp  test_RendererSimple.cpp  test_Scene.cpp  test_Sphere.cpp  test_Torus.cpp  test_Vector.cpp  test_Video.cpp
(+162 files in other folders)
